Move SE, ET, and MEPM into .env
This makes testing on my end without constantly making useless commits so much easier. Also itll probably be easier for people to understand how to use easily now (somewhat)

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,6 @@
-USER=Username
-PASS=Password
+USER=Username            #The bot account username
+PASS=Password            #The bot account password
+
+TASKS=TaskOne; TaskTwo   #The file names of the tasks you wish to run, seperated by a ";" or "; "
+SUBMITEDITS=True         #Set to True when you want the bot to make edits for real. Set to False when debugging
+EDITSPERMIN=10           #Amount of edits to run per minute. Check the wikipedia bot guidelines to determine how many you need
