--- a/.env-example
+++ b/.env-example
@@ -4,3 +4,4 @@ PASS=Password            #The bot account password
 TASKS=TaskOne; TaskTwo   #The file names of the tasks you wish to run, seperated by a ";" or "; "
 SUBMITEDITS=True         #Set to True when you want the bot to make edits for real. Set to False when debugging
 EDITSPERMIN=10           #Amount of edits to run per minute. Check the wikipedia bot guidelines to determine how many you need
+INDEV=True               #If you are actively developing the bot, set this to True. This prevents the bot from making edits outside of the User namespace
