Implement MAXEDITS as a .env option

--- a/.env-example
+++ b/.env-example
@@ -4,4 +4,5 @@ PASS=Password            #The bot account password
 TASKS=TaskOne; TaskTwo   #The file names of the tasks you wish to run, seperated by a ";" or "; "
 SUBMITEDITS=True         #Set to True when you want the bot to make edits for real. Set to False when debugging
 EDITSPERMIN=10           #Amount of edits to run per minute. Check the wikipedia bot guidelines to determine how many you need
-INDEV=True               #If you are actively developing the bot, set this to True. This prevents the bot from making edits outside of the User namespace
+INDEV=True               #If you are actively developing the bot, set this to True. This prevents the bot from making edits outside of the User( talk) namespace
+MAXEDITS=50              #If a bot is going through trial and has an edit count limit, this feature can be used to implement it. Set this to 0 to disable it
